# go1_raisim

./: CMakeLists.txt
robot/: Go1.urdf
src/: go1_spawn.cpp
